Fixed gaps

--- a/css/style.scss
+++ b/css/style.scss
@@ -140,6 +140,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 32px;
 
     .project-explanation__content {
       display: flex;
@@ -182,6 +183,7 @@ header {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
+    gap: 32px;
 
   }
 
@@ -296,6 +298,7 @@ header {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
+      gap: 32px;
 
       .content {
         .review__comment {
@@ -306,7 +309,7 @@ header {
 
         .review__description {
           @extend %description;
-          padding-bottom: 8px;
+          padding-bottom: 24px;
         }
 
         .review__logo {
@@ -487,6 +490,7 @@ header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        gap: 32px;
         padding-bottom: 96px;
         border-bottom: 1px solid $deep-black;
 
@@ -522,7 +526,7 @@ header {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
-          gap: 80px;
+          gap: 64px;
 
           .nav__wrap {
             display: flex;
